--- a/templates/ledger/verify_page.html
+++ b/templates/ledger/verify_page.html
@@ -1,19 +1,15 @@
+{% load static %}
 {% load humanize %}
-<center><h1>Ledger</h1>
-<br>
 <html>
 <head>
-    <title>Ledger</title>
+    <title>Veriy Page</title>
 </head>
-<body bgcolor="#ddfdff">
-<style>
-table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-}
-</style>
-
-<form action="{% url 'ledger:del_list' lists.id %}" method="post">
+<link rel="stylesheet" type="text/css" href='{% static "" %}/ledger/{{ theme }}.css' />
+<body>
+<div class="head">
+<h1>Verify</h1>
+</div>
+<form action="{% url 'ledger:del_list' theme lists.id %}" method="post">
 {% csrf_token %}
 <table bgcolor="white" style="width:80% ; text-align:center;">
     <th bgcolor="#8fe0fc">Date</th>
@@ -36,15 +32,13 @@ table, th, td {
 
 </tr>
 
-
-
 </table>
 <br>
 <div style="border: 3px solid black; width:20%; padding:10;"><b><p style="font-size:20px; ">Are you sure to <span style="color:red">DELETE</span> ?</style><b>
 </div><br><br>
 <input type="submit" value="Yes"><br><br>
 </form>
-<form action="{% url 'ledger:edit_list' %}">
+<form action="{% url 'ledger:edit_list' theme %}">
     <input type="submit" value="No" />
 </form>
 
